# agenticqueue-v2

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AUTHORS.md  LICENSE  README.md  SECURITY.md  aq2-15-clean-proof.txt  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  codeql.yml  lint.yml  parity.yml  secret-scan.yml  test.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_actors_apikeys_audit.py  0003_api_key_lookup_id.py  0004_cap03_entities.py  0005_cap0305_schema_consolidation.py  0006_cap04_indexes_and_system_actor.py  0007_cap05_decisions_and_learnings.py  0008_objectives.py  0009_visuals.py  0010_components.py
apps/api/src/aq_api/: __init__.py  _audit.py  _auth.py  _datetime.py  _db.py  _health.py  _request_context.py  _settings.py  _version.py  app.py  mcp.py
apps/api/src/aq_api/models/: __init__.py  audit.py  auth.py  components.py  contract_profiles.py  db.py  decisions.py  health.py  inheritance.py  job_comments.py  jobs.py  labels.py  learnings.py  objectives.py  pipelines.py  projects.py  visuals.py  workflows.py
apps/api/src/aq_api/routes/: __init__.py  _errors.py  actors.py  api_keys.py  audit.py  components.py  decisions.py  jobs.py  labels.py  learnings.py  objectives.py  pipelines.py  projects.py  setup.py  workflows.py
apps/api/src/aq_api/services/: __init__.py  _artifacts.py  _contract_validator.py  _inheritance.py  actors.py  api_keys.py  audit.py  auth.py  claim.py  claim_auto_release.py  components.py  decisions.py  heartbeat.py  instantiate.py  job_comments.py  job_lifecycle.py  jobs.py  labels.py  learnings.py  list_ready_jobs.py  objectives.py  pipelines.py  projects.py  release.py  review.py  setup.py  submit.py  workflows.py
apps/api/tests/: _artifact_test_support.py  _db_cleanup.py  _dl_test_support.py  _isolated_schema.py  _jobs_test_support.py  _submit_job_test_support.py  test_actors.py  test_api_keys.py  test_app.py  test_attach_label_atomicity.py  test_audit_models.py  test_audit_query.py  test_audit_writer.py  test_audited_op.py  test_auth.py  test_auth_lookup_amplification.py  test_auth_models.py  test_business_rule_exception_details.py  test_cancel_job.py  test_claim_auto_release_sweep.py  test_claim_next_job.py  test_clone_pipeline_atomicity.py  test_components_ops.py  test_creator_only_auth.py  test_db_schema.py  test_decisions_standalone.py  test_fastmcp_multipart_spike.py  test_health_models.py  test_heartbeat_job.py  test_inheritance_lookups.py  test_instantiate_atomicity.py  test_instantiate_pipeline.py  test_job_comments.py  test_jobs.py  test_labels_concurrency.py  test_learnings_standalone.py  test_lifespan_sweep.py  test_list_op_pagination.py  test_list_ready_jobs.py  test_mcp.py  (+32 more)
apps/cli/: pyproject.toml
apps/cli/src/aq_cli/: __init__.py  _config.py  main.py
apps/cli/tests/: test_main.py
apps/web/: Dockerfile  eslint.config.mjs  middleware.ts  package.json  playwright.config.ts  tailwind.config.ts
plans/v2-rebuild/: brief.md  capabilities.md  capability-01-plan.md  capability-02-plan.md  capability-03-plan.md  capability-04-plan.md  capability-05-plan.md  handoff-cap04-prep-2026-04-28.md  handoff-cap05-prep-2026-04-29.md  (+2 more)
scripts/: redact-evidence.sh  redact_evidence.py  three-surface-sweep.py  validate-cap01.ps1  validate-cap01.sh  validate-cap02.ps1  validate-cap02.sh  validate-cap03.sh  verify-cap0305-shape.sh
(+653 files in other folders)
