[project]
name = "agenticqueue-v2"
version = "0.1.0"
description = "AgenticQueue 2.0 capability-first rebuild."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aq-api",
    "aq-cli",
]

[project.scripts]
aq = "aq_cli.main:app"
aq-mcp = "aq_api.mcp:stdio_main"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.26,<2",
    "ruff>=0.9,<1",
]

[tool.uv.sources]
aq-api = { workspace = true }
aq-cli = { workspace = true }

[tool.uv.workspace]
members = ["apps/api", "apps/cli"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/cli/tests", "tests/parity"]
asyncio_mode = "auto"
pythonpath = ["apps/api/src", "apps/cli/src"]
