[project]
name = "aq-api"
version = "0.1.0"
description = "AgenticQueue 2.0 API service."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "fastmcp>=2.3,<3",
    "mcp>=1.2,<2",
    "pydantic>=2,<3",
    "uvicorn[standard]>=0.34,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aq_api"]
