[project]
name = "aq-api"
version = "0.1.0"
description = "AgenticQueue 2.0 API service."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13,<1.14",
    "argon2-cffi>=23.1,<24",
    "asyncpg>=0.29,<0.30",
    "fastapi>=0.115,<1",
    "fastmcp>=2.3,<3",
    "mcp>=1.2,<2",
    "pydantic>=2,<3",
    "pydantic-settings>=2.2,<3",
    "psycopg[binary]>=3.1.18,<3.2",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
aq-mcp = "aq_api.mcp:stdio_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aq_api"]
