[project]
name = "aq-cli"
version = "0.1.0"
description = "AgenticQueue 2.0 CLI."
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28,<1",
    "typer>=0.15,<1",
]

[project.scripts]
aq = "aq_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aq_cli"]
